manifests/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: 'selfsigned-issuer'
    kubernetes.io/tls-acme: 'true'
    # nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
    # nginx.ingress.kubernetes.io/backend-protocol: 'HTTPS'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd.localcluster
      secretName: argocd-tls
  rules:
    - host: argocd.localcluster
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  # number: 443
                  number: 8080
